...
    @Published var editingCardNumber = false
    @Published var editingPin = false

    @Published var cardNumberValid: Bool?
    @Published var pinValid: Bool?

    let cardNumberTitle = "Card number"
    let pinTitle = "PIN"

    var cardNumberPlaceholder = "XXXX XXXX XXXX XXXX"
    @Published var pinPlaceholder = "XXXX"

    private(set) var cardNumberText: String = ""
    private(set) var pinText = ""
...
